--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -56,7 +56,7 @@ header {
 .logo {
     width: 2rem;
     height: 2rem;
-    background-image: url('/media/alphasoft.svg');
+    background-image: url('media/alphasoft.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -90,7 +90,7 @@ h1 {
     border-radius: 30px;
     border: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    background-image: url('/media/search-lens.svg');
+    background-image: url('media/search-lens.svg');
     background-repeat: no-repeat;
     background-size: 1.5em;
     background-position: 15px center;
@@ -117,7 +117,7 @@ h1 {
     border: none;
     box-shadow: 0 0 5px 5px rgba(255, 255, 255, 0.2);
     cursor: pointer;
-    background-image: url('/media/GoPilot.svg');
+    background-image: url('media/GoPilot.svg');
     background-repeat: no-repeat;
     background-size: 2em;
     background-position: center;
