--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 #background {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -49,6 +49,8 @@ header {
     width: 100%;
     padding-bottom: 1rem;
     background-color: rgba(255, 255, 255, 0.0);
+    height: 18rem;
+    z-index: 3;
 }
 
 .top-bar {
@@ -105,7 +107,7 @@ h1 {
     align-items: center;
     position: relative;
     width: 100%;
-    max-width: 700px;
+    max-width: 44rem;
     margin: 1rem auto;
 }
 
@@ -150,13 +152,13 @@ h1 {
 }
 
 .gopilot-button:hover {
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
 
 .buttons {
     display: flex;
     justify-content: center;
-    width: 96%;
+    width: 98%;
 }
 
 button {
@@ -165,41 +167,32 @@ button {
     border-radius: 4px;
     border: none;
     cursor: pointer;
-    margin: 0 0.6rem;
+    margin: 0 0.8rem;
     background-color: rgba(255, 255, 255, 0.7);
     color: #666;
 }
 
 button:hover {
     background-color: #ffffff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
     color: #333333;
 }
 
-#searchButton {
-
-}
-
-#searchButton:hover {
-
-}
-
-#luckyButton {
-
-}
-
-#timeButton {
-}
-
-button:hover {
-
-}
-
 main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 24rem;
 }
 
 #searchResults {
     visibility: hidden;
+    width: 70%;
+    background-color: rgba(250, 250, 250, 0.9);
+    padding: 2rem 3rem;
+    border-radius: 10px;
+    margin-bottom: 5rem;
+    z-index: 0;
 }
 
 #time {
