--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -202,7 +202,7 @@ main {
 #gopilotDialog {
     border-radius: 10px;
     background-color: #f9f9f9;
-    padding: 15px;
+    padding: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: relative;
 }
@@ -216,6 +216,11 @@ main {
     border-width: 10px;
     border-style: solid;
     border-color: #f9f9f9 transparent transparent transparent;
+}
+
+#gpQuery {
+    outline: none;
+    padding: 0.4em 0.2em;
 }
 
 #badLuckDialog {
