--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -200,63 +200,33 @@ main {
 }
 
 #gopilotDialog {
-    border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: #f7f7f7;
     padding: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: relative;
 }
 
-#gopilotDialog::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 10px;
-    border-style: solid;
-    border-color: #f9f9f9 transparent transparent transparent;
-}
-
 #gpQuery {
     outline: none;
     padding: 0.4em 0.2em;
+    width: 95%;
 }
 
 #badLuckDialog {
-    border-radius: 10px;
-    background-color: #f9f9f9;
-    padding: 15px;
+    background-color: #f7f7f7;
+    padding: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: relative;
-}
-
-#badLuckDialog::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 10px;
-    border-style: solid;
-    border-color: #f9f9f9 transparent transparent transparent;
 }
 
 #timeDialog {
-    border-radius: 10px;
-    background-color: #f9f9f9;
-    padding: 15px;
+    background-color: #000;
+    padding: 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: relative;
-}
-
-#timeDialog::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 10px;
-    border-style: solid;
-    border-color: #f9f9f9 transparent transparent transparent;
+    text-align: center;
+    color: #0f0;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3rem;
+    letter-spacing: 0.1rem;
 }
